[tool.poetry]
name = "my-streamlit-app"
version = "0.1.0"
description = "Streamlitによる求人広告分析アプリ"
authors = ["あなたの名前 <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.25.0"
pandas    = "^1.5.3"
numpy     = "^1.25.0"
matplotlib= "^3.7.1"
scikit-learn = "^1.6.1"
statsmodels  = "^0.14.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
